Database update: title attribute

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,7 +83,12 @@ dependencies {
     //Dagger hilt
     implementation "com.google.dagger:hilt-android:2.38.1"
     kapt "com.google.dagger:hilt-compiler:2.38.1"
+
     //hilt viewModel
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+
+    //compose html
+    implementation 'com.github.ireward:compose-html:1.0.2'
+
 
 }
